finished html portion

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
 
+
   <title>My Resume</title>
 
   <link rel="stylesheet" href="css/index.css">
@@ -14,6 +15,69 @@
 </head>
 
 <body>
-  <h1>My Resume</h1>
+  <nav>
+    <a href= "#">Home</a>
+    <a href= "#">About</a>
+    <a href= "#">Portfolio</a>
+    <a href= "#">Contact</a>
+  </nav>
+
+  <header>
+    <img class="profesionalPicture" src="#">
+    <h1>Bernd de Kruik</h1>
+    <h6>Full stack multilingual Web Developer</h6>
+    <p>Available for hire, you can request my work here:</p>
+    <button>Contact</button>
+  </header>
+
+  <section class="mainText">
+    <div class="listenUp">
+      <h2>Some generic about me</h2>
+      <p>Filler text and stuff</p>
+    </div>
+
+    <div class="stuffImGoodAt" >
+      <h3>Stuff I'm Good At:</h3>
+      <ol>
+        <li>Logical reasoning</li>
+        <li>Working under stress</li>
+        <li>Working in and guiding teams</li>
+        <li>Sematics</li>
+      </ol>
+    </div>
+
+    <div class="workHistory">
+      <table>
+        <tr>
+          <th>Yrs</th>
+          <th>Company</th>
+          <th>Title</th>
+          <th>Tech Used</th>
+        </tr>
+        <tr>
+          <th>1</th>
+          <th>Apple</th>
+          <th>Software Engineer</th>
+          <th>Swift</th>
+        </tr>
+        <tr>
+          <th>2</th>
+          <th>Microsoft</th>
+          <th>Computer Scientist</th>
+          <th>.NET</th>
+        </tr>
+        <tr>
+          <th>3</th>
+          <th>Amazon</th>
+          <th>Dev Ops</th>
+          <th>AWS</th>
+        </tr>
+      </table>
+    </div>
+  </section>
+
+  <footer>
+    Copyright MorbidM 2019
+  </footer>
 </body>
 </html>
