gotta submit the report, getting back to it tomorrow after work

--- a/index.html
+++ b/index.html
@@ -24,26 +24,30 @@
 
   <header>
     <img class="profesionalPicture" src="#">
-    <h1>Bernd de Kruik</h1>
-    <h6>Full stack multilingual Web Developer</h6>
-    <p>Available for hire, you can request my work here:</p>
-    <button>Contact</button>
+    <div>
+      <h1>Bernd de Kruik</h1>
+      <h6>Full stack multilingual Web Developer</h6>
+      <p>Available for hire, you can request my work here:</p>
+      <button>Contact</button>
+    </div>
   </header>
 
   <section class="mainText">
-    <div class="listenUp">
-      <h2>Some generic about me</h2>
-      <p>Filler text and stuff</p>
-    </div>
+    <div class="topPart">
+      <div class="listenUp">
+        <h2>Some generic about me</h2>
+        <p>Filler text and stuff</p>
+      </div>
 
-    <div class="stuffImGoodAt" >
-      <h3>Stuff I'm Good At:</h3>
-      <ol>
-        <li>Logical reasoning</li>
-        <li>Working under stress</li>
-        <li>Working in and guiding teams</li>
-        <li>Sematics</li>
-      </ol>
+      <div class="stuffImGoodAt" >
+        <h3>Stuff I'm Good At:</h3>
+        <ol>
+          <li>Logical reasoning</li>
+          <li>Working under stress</li>
+          <li>Working in and guiding teams</li>
+          <li>Sematics</li>
+        </ol>
+      </div>
     </div>
 
     <div class="workHistory">
