finished the mvp

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="initial-scale=1">
 
 
   <title>My Resume</title>
@@ -23,7 +24,7 @@
   </nav>
 
   <header>
-    <img class="profesionalPicture" src="#">
+    <img class="profesionalPicture" src="dark-alleyway - Copy.jpg">
     <div>
       <h1>Bernd de Kruik</h1>
       <h6>Full stack multilingual Web Developer</h6>
@@ -35,7 +36,7 @@
   <section class="mainText">
     <div class="topPart">
       <div class="listenUp">
-        <h2>Some generic about me</h2>
+        <h2>Some generic info about me</h2>
         <p>Filler text and stuff</p>
       </div>
 
@@ -51,6 +52,7 @@
     </div>
 
     <div class="workHistory">
+      <h3>Work History</h3>
       <table>
         <tr>
           <th>Yrs</th>
